# nso-stats-fetcher

./: LICENSE  README.md  _config.yml  analysis.md  pyproject.toml  requirements.txt  status.txt
.github/workflows/: fetch_stats.yml
data/: ar_inflation.csv  ar_inflation_cpi.csv  ie_inflation_cpi.csv  inflation_stats.html  jp_inflation_cpi.csv  mx_inflation_cpi.csv  ng_inflation_cpi.csv  nso_stats_metadata.json  ph_inflation_cpi.csv  uk_inflation_cpi.csv  uk_inflation_cpi.json  uk_inflation_cpih.csv  uk_inflation_rpi.csv  za_inflation_cpi.csv  za_inflation_cpi.json  za_inflation_ppi.csv  za_inflation_ppi.json
nsofetch/: analysis.py  fetch_all.py  fetch_ar.py  fetch_ar_stats.py  fetch_jp.py  fetch_ng.py  fetch_ph.py  fetch_uk.py  fetch_uk_stats.py  fetch_za.py  fetch_za_stats.py  filepaths.py  uk_historic_cpi.py  uk_historic_inflation.py  utils.py
src/nsofetch/: fetch_all.py  fetch_ar.py  fetch_ie.py  fetch_mx.py  fetch_ng.py  fetch_ph.py  fetch_uk.py  fetch_za.py  filepaths.py  utils.py
